fixed missalignment react

--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,14 @@ body {
     }
 }
 
+@media (min-width: 992px) {
+    /*
+    body {
+        font-size: 17px;
+    }
+    */
+}
+
 a {
     color: rgb(231, 86, 125);
     -webkit-transition: 0.5s;
@@ -117,7 +125,7 @@ figure {
 
 @media screen and (max-width: 1200px) {
     #glenn-aside {
-        width: 30%;
+        width: 20%;
     }
 }
 
@@ -276,7 +284,7 @@ figure {
 
 @media screen and (max-width: 1200px) {
     #glenn-main {
-        width: 70%;
+        width: 80%;
     }
 }
 
@@ -648,6 +656,14 @@ body.offcanvas .glenn-nav-toggle {
     margin-left: auto;
     margin-right: auto;
 }
+
+@media screen and (max-width: 1200px) {
+    .glenn-cards .glenn-flex-wrap>div {
+        width: 95%;
+    }
+}
+
+
 
 .glenn-cards .glenn-flex-wrap>div:nth-of-type(1) {
     float: left;
@@ -1821,6 +1837,53 @@ p.cursor::after {
     margin: 10px auto 20px;
 }
 
+
+
+
+/*======================
+    Career Stats
+=======================*/
+.career-stats-box {
+    display: block;
+    align-items: center;
+    background-color: #737373;
+    width: 65%;
+    padding-top: 15px;
+    margin: -30px auto 0;
+    padding-bottom: 17px;
+    border-bottom-left-radius: 40%;
+    border-bottom-right-radius: 40%;
+    color: white;
+}
+
+@media screen and (max-width: 1200px) {
+    .career-stats-box {
+        width: 95%;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .career-stats-box {
+        width: 100%;
+    }
+}
+
+.career-stats-number {
+    font-size: 1.8em;
+    font-weight: bold;
+    display: block;
+    text-align: center;
+}
+
+.career-stats-desc {
+    font-size: 0.6em;
+    font-weight: lighter;
+    display: inline-block;
+    text-align: center;
+}
+
+
+
 /*======================
     Timeline
 =======================*/
@@ -1885,6 +1948,13 @@ p.cursor::after {
     list-style-type: none;
 }
 
+@media screen and (max-width: 920px) { /* Tablets - Vertical */
+    .timeline {
+        width: 600px;
+    }
+}
+
+
 .timeline:before {
     position: absolute;
     left: 50%;
@@ -1923,11 +1993,22 @@ p.cursor::after {
     float: left;
     text-align: right;
 }
+@media screen and (max-width: 920px) {
+    .direction-l {
+        width: 253px;
+    }
+}
 
 .direction-r {
     position: relative;
     width: 280px;
     float: right;
+}
+
+@media screen and (max-width: 920px) {
+    .direction-r {
+        width: 254px;
+    }
 }
 
 .flag-wrapper {
@@ -1975,6 +2056,10 @@ p.cursor::after {
     border-radius: 10px;
     border: 4px solid #7f7f7f;
     z-index: 10;
+}
+
+@media screen and (max-width: 920px) {
+
 }
 
 .direction-l .flag.xl:before {
@@ -2184,10 +2269,45 @@ p.cursor::after {
 }
 
 @media screen and (min-width: 400px ?? max-width: 660px) {
-
     .direction-l .desc,
     .direction-r .desc {
         margin: 1em 4em 0 4em;
+    }
+
+}
+
+/*======================
+    Website Credits
+=======================*/
+.glenn-website-credits {
+    display: block;
+    align-items: center;
+    width: 63%;
+    margin: 5px auto 0;
+    font-size: small;
+    text-align: center;
+}
+
+
+@media screen and (max-width: 1200px) {
+    .glenn-website-credits {
+        width: 90%;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .glenn-website-credits {
+        width: 100%;
+    }
+}
+
+/*======================
+    Icebreaker
+=======================*/
+
+@media screen and (max-width: 1200px) {
+    .col-md-6 {
+        width: 100%;
     }
 
 }
